<resources>
    <string name="app_name">FTC_2015_2016</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="tournament_mode_title">Tournament Mode</string>
    <string name="test_autonomous_title">Test Autonomous</string>
    <string name="drive_robot_title">Drive Robot</string>
    <string name="move_motors_title">Move Motors</string>
    <string name="sensor_view_title">Sensor View</string>
    <string name="background_image_description">Main background image</string>
    <string name="title_activity_tournament">TournamentActivity</string>
    <string name="title_activity_autonomous">AutonomousActivity</string>
    <string name="title_activity_drive">DriveActivity</string>
    <string name="no_content">No content has been created for this mode.</string>
    <string name="title_activity_motor">MotorActivity</string>
    <string name="title_activity_sensor">SensorActivity</string>
    <string name="title_activity_select_autonomous">SelectAutonomousActivity</string>
    <string name="autonomous_select_no_autonomous">No Autonomous</string>
    <string name="autonomous_select_done">Done</string>
    <string name="tournament_select_teleop">Select Teleop</string>
    <string name="tournament_select_autonomous">Select Autonomous</string>
    <string name="title_activity_select_teleop">SelectTeleopActivity</string>
    <string name="teleop_select_no_teleop">No Teleop</string>
    <string name="teleop_select_done">Done</string>
    <string name="tournament_mode_go">Go!</string>
    <string name="title_activity_edit_autonomous">EditAutonomousActivity</string>
    <string name="test_autonomous_select_autonomous">Select an Autonomous</string>
    <string name="test_autonomous_edit_autonomous">Edit an Autonomous</string>
    <string name="test_autonomous_sort_autonomous">Sort Autonomous Programs</string>
    <string name="edit_autonomous_done">Done</string>
</resources>
