<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tournament_mode_title"
        android:id="@+id/tournament_mode_btn"
        android:onClick="enterTournamentMode"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_autonomous_title"
        android:id="@+id/test_autonomous_btn"
        android:onClick="enterAutonomousMode"
        android:layout_below="@+id/tournament_mode_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/drive_robot_title"
        android:id="@+id/drive_robot_btn"
        android:onClick="enterDriveMode"
        android:layout_below="@+id/test_autonomous_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/move_motors_title"
        android:id="@+id/move_motors_btn"
        android:onClick="enterMotorMode"
        android:layout_below="@+id/drive_robot_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_view_title"
        android:id="@+id/sensor_view_btn"
        android:onClick="enterSensorMode"
        android:layout_below="@+id/move_motors_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
