<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="ftc.nova.ftc_2015_2016.AutonomousActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_autonomous_select_autonomous"
        android:id="@+id/test_autonomous_select_btn"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="selectAutonomous"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_autonomous_edit_autonomous"
        android:id="@+id/test_autonomous_edit_btn"
        android:layout_below="@+id/test_autonomous_select_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="editAutonomous"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/test_autonomous_sort_autonomous"
        android:id="@+id/test_autonomous_sort_btn"
        android:layout_below="@+id/test_autonomous_edit_btn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
